--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@
     --bs-link-color-rgb: 66, 157, 33; /* Customize your secondary color */
 }
 body {
-    background-color:  #5fb8eb;
-    }
-    
-    h1, h2, h3, h4 {
-    }
+    background-color:  #fff4f4;
+    background-image: url('/img/bg-image.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
     
 .mystery-font {
     text-shadow: 1px 1px 1px #fff;
@@ -28,6 +28,10 @@ body {
         
 .orange-font {
     color: rgb(219, 106, 41);
+}
+
+.bronw-color {
+    color: #642B32;
 }
 
 .logo-container img {
@@ -59,8 +63,23 @@ body {
 .random-background-11 { background-color: #e69343; }
 .random-background-12 { background-color: #be814c; }
 
+.bg-fixed {
+    background-color: #be814c !important;
+}
+    
+.modal-header,
+.modal-footer {
+    background-color: #be814c !important;
+}
+
+.modal-title {
+    color: #fff;
+}
+
 .card {
     border: none;
+    -webkit-box-shadow: 2px 2px 2px 2px #926136;
+    box-shadow: 2px 2px 2px 2px #926136;
 }
 
 .card .card-body {
@@ -69,4 +88,13 @@ body {
     -moz-border-radius: 0 0 0.375rem 0.375rem;
     -ms-border-radius: 0 0 0.375rem 0.375rem;
     -o-border-radius: 0 0 0.375rem 0.375rem;
+}
+
+.icon-cta {
+    height: 80px;
+    width: 80px;
+    padding: 1rem;
+    transform: rotate(45deg);
+    left: 82%;
+    bottom: 79%;
 }
