--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Mystery+Quest&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
 :root {
     --bs-primary-rgb: 219, 106, 41; /* Customize your primary color */
@@ -23,19 +24,26 @@ body {
     font-weight: 100;
     font-style: normal;
     text-shadow: 1px 1px 1px #000;
-
+    }
+    
+.indie-flower-font {
+    font-family: "Indie Flower", cursive;
+    font-weight: 400;
+    font-style: normal;
+    text-shadow: 1px 1px 1px #b7b7b7;
 }
+  
         
 .orange-font {
     color: rgb(219, 106, 41);
 }
 
-.bronw-color {
+.brown-color {
     color: #642B32;
 }
 
 .logo-container img {
-    width: 100px; /* default size for mobile */
+    /* width: 100px; default size for mobile */
 }
 
 @media (min-width: 768px) {
@@ -63,14 +71,14 @@ body {
 .random-background-11 { background-color: #e69343; }
 .random-background-12 { background-color: #be814c; }
 
-.bg-fixed {
+/* .bg-fixed {
     background-color: #be814c !important;
-}
+} */
     
-.modal-header,
+/* .modal-header,
 .modal-footer {
     background-color: #be814c !important;
-}
+} */
 
 .modal-title {
     color: #fff;
@@ -91,10 +99,9 @@ body {
 }
 
 .icon-cta {
-    height: 80px;
-    width: 80px;
-    padding: 1rem;
+    height: 50px;
+    width: 50px;
     transform: rotate(45deg);
-    left: 82%;
-    bottom: 79%;
+    left: 86%;
+    bottom: 83%;
 }
