--- a/style.css
+++ b/style.css
@@ -42,14 +42,18 @@ body {
     color: #642B32;
 }
 
-.logo-container img {
-    /* width: 100px; default size for mobile */
+.card-img-top {
+    height: 226px;
+    width: auto;
 }
 
 @media (min-width: 768px) {
     .logo-container img {
         width: 200px; /* size for tablet and up */
     }
+    /* .card-img-top {
+        max-height: 350px;
+    } */
 }
 
 @media (min-width: 992px) {
@@ -141,3 +145,51 @@ body {
     background: #4dc247 !important;
     color: #4dc247;
   }
+
+
+
+
+
+  .cookie-consent {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #f0f0f0;
+    padding: 10px;
+    text-align: center;
+    box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.cookie-consent p {
+    margin: 0;
+    display: block;
+    margin-bottom: 10px;
+}
+
+.cookie-options {
+    text-align: left;
+    margin-bottom: 10px;
+}
+
+.cookie-options label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.cookie-options input {
+    margin-right: 10px;
+}
+
+.cookie-consent button {
+    margin: 0;
+    padding: 5px 10px;
+    cursor: pointer;
+    border: none;
+    background-color: #007bff;
+    color: white;
+}
+
+.cookie-consent button:hover {
+    background-color: #0056b3;
+}
