--- a/style.css
+++ b/style.css
@@ -47,13 +47,17 @@ body {
     width: auto;
 }
 
+.modal-body p{
+    font-size: 1rem;
+}
 @media (min-width: 768px) {
     .logo-container img {
         width: 200px; /* size for tablet and up */
+        margin-right: 3rem;
     }
-    /* .card-img-top {
-        max-height: 350px;
-    } */
+    .contact-info-container{
+        margin-top: 3rem;
+    }
 }
 
 @media (min-width: 992px) {
@@ -92,6 +96,7 @@ body {
     border: none;
     -webkit-box-shadow: 2px 2px 2px 2px #926136;
     box-shadow: 2px 2px 2px 2px #926136;
+    overflow: hidden;
 }
 
 .card .card-body {
@@ -155,7 +160,7 @@ body {
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: #f0f0f0;
+    background-color: rgba(240, 240, 240, 0.9);
     padding: 10px;
     text-align: center;
     box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
@@ -181,33 +186,19 @@ body {
 .cookie-options input {
     margin-right: 10px;
 }
+.cookie-options input:checked {
+    background: #642B32;
+}
 
 .cookie-consent button {
     margin: 0 5px;
     padding: 5px 10px;
     cursor: pointer;
     border: none;
-    background-color: #007bff;
     color: white;
 }
 
-.cookie-consent button:hover {
-    background-color: #0056b3;
-}
-
-#rejectAll {
-    background-color: #dc3545;
-}
-
-#rejectAll:hover {
-    background-color: #c82333;
-}
-
-
 .btn-close {
-    color: #fff !important;
-    fill: #fff !important;
-    stroke: #fff !important;
     filter: invert(1);
 }
 
