--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 :root {
     --bs-primary-rgb: 219, 106, 41; /* Customize your primary color */
     --bs-heading-color: 219, 106, 41;
-    --bs-link-color-rgb: 66, 157, 33; /* Customize your secondary color */
+    --bs-link-color-rgb: 219, 106, 41; /* Customize your secondary color */
 }
 body {
     background-color:  #fff4f4;
@@ -127,8 +127,8 @@ body {
 }
 
 .whatsapp_wrap {
-    bottom: 82%;
-    right: 10px;
+    bottom: 50%;
+    left: 2%;
     opacity: 1;
     transition: opacity 0.5s ease 0s;
     box-sizing: border-box;
@@ -146,9 +146,7 @@ body {
     width: 50px;
     height: 50px;
     order: 1;
-    padding: 5px;
-    box-sizing: border-box;
-    border-radius: 50%;
+    border-radius: 12px;
     cursor: pointer;
     overflow: hidden;
     box-shadow: rgba(0, 0, 0, 0.4) 2px 2px 6px;
@@ -156,10 +154,8 @@ body {
     position: relative;
     z-index: 200;
     display: block;
-    border: 0px;
-    background: #4dc247 !important;
-    color: #4dc247;
-  }
+
+}
 
 
 
@@ -232,5 +228,21 @@ body {
 
 .footer-container {
     background-color: #000;
-    /* height: 400px;; */
+    text-align: center;
+}
+.footer-container img {
+    width: 150px;
+}
+.footer-container .icons {
+    filter: brightness(0) saturate(100%) invert(66%) sepia(93%) saturate(703%) hue-rotate(347deg) brightness(99%) contrast(89%);
+    max-width: 32px;
+    max-height: 32px;
+}
+.footer-container .social-icons {
+    max-width: 56px;
+    max-height: 56px;
+    margin: 0.5rem;
+}
+.logo-footer-container {
+    width: 300px;
 }
